feat(persistence): add Flyway schema and repository mappings